--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 	<properties>
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
 		<mobicents.cluster.version>1.12</mobicents.cluster.version>
-		<mobicents.balancer.version>1.5-SNAPSHOT</mobicents.balancer.version>
+		<mobicents.balancer.version>1.5.0.FINAL</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>1.4.0-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<mobicents.jain.sip.ext.version>1.1</mobicents.jain.sip.ext.version>		
 	</properties>
