--- a/sip-servlets-test-suite/testsuite/src/test/resources/logging.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/logging.properties
@@ -8,11 +8,11 @@ handlers = org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
 # Describes specific configuration info for Handlers.
 ############################################################
 
-org.apache.juli.FileHandler.level = FINEST
+org.apache.juli.FileHandler.level = INFO
 org.apache.juli.FileHandler.prefix = testsuite.
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 
-java.util.logging.ConsoleHandler.level = FINEST
+java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 # ROOT LOGGER LEVEL
