--- a/docs/jdocbook-telscale/pom.xml
+++ b/docs/jdocbook-telscale/pom.xml
@@ -43,20 +43,20 @@
 			<plugin>
 				<groupId>org.jboss.maven.plugins</groupId>
 				<artifactId>maven-jdocbook-plugin</artifactId>
-				<version>2.2.0</version>
+				<version>2.3.5</version>
 				<extensions>true</extensions>
 				<dependencies>
 					<dependency>
-						<groupId>org.jboss</groupId>
-						<artifactId>jbossorg-docbook-xslt</artifactId>
-						<version>1.1.0</version>
-					</dependency>
-					<dependency>
-						<groupId>org.jboss</groupId>
-						<artifactId>jbossorg-jdocbook-style</artifactId>
-						<version>1.1.0</version>
-						<type>jdocbook-style</type>
-					</dependency>
+				      		<groupId>org.mobicents.jdocbook</groupId>
+				      		<artifactId>telestax-xslt-ns</artifactId>
+				      		<version>1.0.0-SNAPSHOT</version>
+				    	</dependency>
+				    	<dependency>
+				      		<groupId>org.mobicents.jdocbook</groupId>
+				      		<artifactId>telestax-community-style</artifactId>
+				      		<type>jdocbook-style</type>
+				      		<version>1.0.0-SNAPSHOT</version>
+				    	</dependency>
 				</dependencies>
 				<configuration>					
 					<sourceDocumentName>SIP_Servlets_Server_User_Guide.xml</sourceDocumentName>
