--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,19 @@
 	<name>Mobicents Sip Servlets</name>
 	<description>Mobicents SIP Servlets</description>
 	<url>http://code.google.com/p/sipservlets/</url>
+
 	<ciManagement>
 		<system>Hudson</system>
 		<url>https://mobicents.ci.cloudbees.com/job/Mobicents-SipServlets-Testsuite/</url>
 	</ciManagement>
+
 	<developers>
 		<developer>
 			<id>jean.deruelle</id>
 			<name>Jean Deruelle</name>
 			<email>jean.deruelle@gmail.com</email>
-			<organization>JBoss/Red Hat</organization>
-			<organizationUrl>http://www.redhat.com/</organizationUrl>
+			<organization>TeleStax, Inc.</organization>
+			<organizationUrl>http://www.telestax.com/</organizationUrl>
 			<roles>
 				<role>Project Lead</role>
 			</roles>
@@ -33,8 +35,8 @@
 			<id>vralev</id>
 			<name>Vladimir Ralev</name>
 			<email>vladimir.ralev@gmail.com</email>
-			<organization>JBoss/Red Hat</organization>
-			<organizationUrl>http://www.redhat.com/</organizationUrl>
+			<organization>TeleStax, Inc.</organization>
+			<organizationUrl>http://www.telestax.com/</organizationUrl>
 			<roles>
 				<role>Active Developer</role>
 			</roles>
