updating deprecated pom usage

--- a/docs/jdocbook-mobicents/pom.xml
+++ b/docs/jdocbook-mobicents/pom.xml
@@ -28,9 +28,9 @@
 						<configuration>
 							<artifactItems>								
 								<artifactItem>
-									<groupId>${pom.groupId}</groupId>
+									<groupId>${project.groupId}</groupId>
 									<artifactId>sip-servlets-docs-sources-mobicents</artifactId>
-									<version>${pom.version}</version>
+									<version>${project.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${project.build.directory}/docbook/resources</outputDirectory>
