--- a/management/sip-servlets-management/pom.xml
+++ b/management/sip-servlets-management/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
 		<version>1.7.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	
 	<modelVersion>4.0.0</modelVersion>
