--- a/sip-servlets-examples/jslee-sips-interop/sips/business/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/business/pom.xml
@@ -12,12 +12,12 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.examples</groupId>
 			<artifactId>jslee-sips-interop-commons</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.examples</groupId>
 			<artifactId>jslee-sips-interop-demo-slee-custom-events</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>			
 		</dependency>
 		<dependency>
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- logging dependency -->
