--- a/sip-servlets-examples/alerting-app/jslee-services/sms-alerting-sbb/pom.xml
+++ b/sip-servlets-examples/alerting-app/jslee-services/sms-alerting-sbb/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>alerting-app-jslee-services-parent</artifactId>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.7.0-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>alerting-app-sms-alerting-sbb</artifactId>
@@ -15,13 +15,13 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.11-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servlet.sip.examples</groupId>
 			<artifactId>alerting-app-jslee-custom-events</artifactId>
-			<version>1.5-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.resources</groupId>
