--- a/sip-servlets-examples/facebook-c2c/pom.xml
+++ b/sip-servlets-examples/facebook-c2c/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
