--- a/sip-servlets-examples/jslee-sips-interop/common/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/common/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>	
