--- a/sip-servlets-examples/media-jsr309-servlet/pom.xml
+++ b/sip-servlets-examples/media-jsr309-servlet/pom.xml
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.12</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
