--- a/sip-servlets-examples/shopping-demo-jsr309/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/business/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.12</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- test dependencies -->
