--- a/containers/tomcat-7/pom.xml
+++ b/containers/tomcat-7/pom.xml
@@ -99,14 +99,14 @@
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-catalina</artifactId>
-			<version>${tomcat.version}</version>
+			<version>${tomcat-7.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-coyote</artifactId>
-			<version>${tomcat.version}</version>
+			<version>${tomcat-7.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
