--- a/pom.xml
+++ b/pom.xml
@@ -287,7 +287,7 @@
 				<module>containers/tomcat-7</module>
 			</modules>
 			<properties>
-				<tomcat.version>7.0.26</tomcat.version>
+				<tomcat-7.version>7.0.26</tomcat-7.version>
 			</properties>	
 			<dependencies>
 				<!-- j2ee dependencies -->
@@ -306,7 +306,7 @@
 				<module>containers/tomcat-7</module>
 			</modules>
 			<properties>
-				<tomcat.version>7.0.26</tomcat.version>
+				<tomcat-7.version>7.0.26</tomcat-7.version>
 			</properties>	
 			<dependencies>
 				<!-- j2ee dependencies -->
