--- a/containers/sip-servlets-catalina-7/pom.xml
+++ b/containers/sip-servlets-catalina-7/pom.xml
@@ -53,14 +53,14 @@
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-catalina</artifactId>
-			<version>${tomcat.version}</version>
+			<version>${tomcat-7.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-coyote</artifactId>
-			<version>${tomcat.version}</version>
+			<version>${tomcat-7.version}</version>
 			<scope>provided</scope>
 		</dependency>	
 <!-- mobicents sip stack extensions deps -->
